--- a/.env
+++ b/.env
@@ -25,3 +25,9 @@ APP_SECRET=86076f1e4f714d58c2274684c6cfee9b
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://moneyer:mysql@database:3306/moneyer?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> OAuth ###
+OAUTH2_PRIVATE_KEY=/var/ssh/jwtRS256
+OAUTH2_PUBLIC_KEY=/var/ssh/jwtRS256.pub
+OAUTH2_ENCRYPTION_KEY=123456789
+###< OAuth ###
