--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "easycorp/easyadmin-bundle": "^3.3",
+        "laminas/laminas-diactoros": "^2.6",
         "league/oauth2-server": "^8.3",
+        "nyholm/psr7": "^1.4",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/psr-http-message-bridge": "^2.1",
         "symfony/runtime": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
