feat(php): mise a jour vers la version 8.0

--- a/.docker/dockerfiles/php/conf/xdebug.ini
+++ b/.docker/dockerfiles/php/conf/xdebug.ini
@@ -1,6 +1,5 @@
 [xdebug]
-xdebug.remote_enable=On
-xdebug.remote_connect_back=On
-xdebug.remote_host=localhost
-xdebug.remote_port=9000
-xdebug.cli_color=On
+xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.client_host=localhost
+xdebug.client_port=9000
