feat(api): installation de api-platform

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ OAUTH2_PRIVATE_KEY=/var/ssh/jwtRS256
 OAUTH2_PUBLIC_KEY=/var/ssh/jwtRS256.pub
 OAUTH2_ENCRYPTION_KEY=123456789
 ###< OAuth ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
