--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.31",
         "symfony/stopwatch": "^5.3",
         "symfony/var-dumper": "5.3.*",
