feat(fixture): création des fixtures

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,7 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\EventListener\:
+        resource: '../src/EventListener/'
+        tags:
+            - { name: doctrine.orm.entity_listener }
