feat(user): ajout de la propriété isAdmin

--- a/assets/fixtures/data/users.yaml
+++ b/assets/fixtures/data/users.yaml
@@ -5,18 +5,16 @@ gwennael.jean@mail.test:
     lastname: Jean
     email: gwennael.jean@mail.test
     password: azerty
-    roles: ['ROLE_SUPER_ADMIN']
+    is_admin: true
 
 travis.elliott@mail.test:
     firstname: Travis
     lastname: Elliott
     email: travis.elliott@mail.test
     password: azerty
-    roles: ['ROLE_USER']
 
 rafael.phillips@mail.test:
     firstname: Rafael
     lastname: Phillips
     email: rafael.phillips@mail.test
     password: azerty
-    roles: ['ROLE_USER']
