--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/debug-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.31",
         "symfony/stopwatch": "^5.3",
         "symfony/var-dumper": "5.3.*",
