--- a/.env
+++ b/.env
@@ -33,5 +33,5 @@ OAUTH2_ENCRYPTION_KEY=123456789
 ###< OAuth ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
