feat(auth): gestion de l'authentification d'un utilisateur

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,5 @@
 security:
-    encoders:
+    password_hashers:
         App\Entity\User:
             algorithm: auto
 
@@ -8,7 +8,7 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        main_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
@@ -24,8 +24,17 @@ security:
             pattern: ^/api/
             lazy: true
             provider: api_user_provider
-            custom_authenticator: App\Security\Api\AccessTokenAuthenticator
+            custom_authenticator: App\Security\Authenticator\AccessTokenAuthenticator
             stateless: true
+        main:
+            pattern: ^/
+            lazy: true
+            provider: main_user_provider
+            custom_authenticator: App\Security\Authenticator\MainAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
