--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 /vendor/
 /.composer/
 ###< symfony/framework-bundle ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
