--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,7 @@
 # Files in the packages/ subdirectory configure your dependencies.
 imports:
     - { resource: oauth.yaml }
+    - { resource: blocks.yaml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
