--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,4 +46,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/api/profile, roles: ROLE_USER }
+         - { path: ^/dashboard, roles: IS_AUTHENTICATED_REMEMBERED }
