feat(dashboard): préparation du service "TransferComputer"

--- a/config/blocks.yaml
+++ b/config/blocks.yaml
@@ -10,3 +10,9 @@ services:
     arguments: ['@twig']
     tags:
       - { name: sonata.block }
+
+  app.block.table.transfers:
+    class: App\Service\Block\TransfersTableBlock
+    arguments: ['@twig']
+    tags:
+      - { name: sonata.block }
