--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.9",
         "easycorp/easyadmin-bundle": "^3.3",
+        "fresh/doctrine-enum-bundle": "^7.3",
         "laminas/laminas-diactoros": "^2.6",
         "league/oauth2-server": "^8.3",
         "nelmio/cors-bundle": "^2.1",
