--- a/assets/fixtures/data/bank/account_shares.yaml
+++ b/assets/fixtures/data/bank/account_shares.yaml
@@ -3,14 +3,14 @@
 travis.elliott@mail.test > Compte Travis > gwennael.jean@mail.test:
   account: travis.elliott@mail.test > Compte Travis
   user: gwennael.jean@mail.test
-  type: edit
+  type: EDIT
 
 gwennael.jean@mail.test > Compte personnel > travis.elliott@mail.test:
   account: gwennael.jean@mail.test > Compte personnel
   user: travis.elliott@mail.test
-  type: edit
+  type: EDIT
 
 gwennael.jean@mail.test > Compte personnel > rafael.phillips@mail.test:
   account: gwennael.jean@mail.test > Compte personnel
   user: rafael.phillips@mail.test
-  type: view
+  type: VIEW
