--- a/.docker/dockerfiles/php/conf/xdebug.ini
+++ b/.docker/dockerfiles/php/conf/xdebug.ini
@@ -1,5 +1,6 @@
 [xdebug]
-xdebug.mode=debug
+xdebug.mode=develop,debug
 xdebug.start_with_request=yes
-xdebug.client_host=localhost
+xdebug.client_host=host.docker.internal
 xdebug.client_port=9000
+xdebug.discover_client_host=yes
