--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -3,6 +3,7 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
         types:
             AccountShareType: App\DBAL\Types\Bank\AccountShareType
+            ChargeDistributionType: App\DBAL\Types\Bank\ChargeDistributionType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
