--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,10 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    _instanceof:
+        App\Service\Transfer\TransferChargeDistribution:
+            tags: [ 'app.transfer_charge_distribution' ]
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
