--- a/.env
+++ b/.env
@@ -18,6 +18,10 @@ APP_ENV=dev
 APP_SECRET=86076f1e4f714d58c2274684c6cfee9b
 ###< symfony/framework-bundle ###
 
+###> fixtures ###
+APP_FIXTURE_DATA_FOLDER=data
+###< fixtures ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
