--- a/assets/fixtures/data/bank/charge_distributions.yaml
+++ b/assets/fixtures/data/bank/charge_distributions.yaml
@@ -1,7 +1,29 @@
 ---
 
+gwennael.jean@mail.test > Compte personnel > Canal+:
+  charge: gwennael.jean@mail.test > Compte personnel > Canal+
+  type: FIFTY_FIFTY
+  users:
+    - gwennael.jean@mail.test
+    - laura.lematelot@mail.test
+
 gwennael.jean@mail.test > Compte commun > Loyer:
   charge: gwennael.jean@mail.test > Compte commun > Loyer
   type: FIFTY_FIFTY
   users:
-    - travis.elliott@mail.test
+    - gwennael.jean@mail.test
+    - laura.lematelot@mail.test
+
+gwennael.jean@mail.test > Compte commun > Électricité:
+  charge: gwennael.jean@mail.test > Compte commun > Électricité
+  type: FIFTY_FIFTY
+  users:
+    - gwennael.jean@mail.test
+    - laura.lematelot@mail.test
+
+laura.lematelot@mail.test > Compte personnel > Internet:
+  charge: laura.lematelot@mail.test > Compte personnel > Internet
+  type: FIFTY_FIFTY
+  users:
+    - gwennael.jean@mail.test
+    - laura.lematelot@mail.test
