--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,8 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    fixture:
+        data_folder: '%env(APP_FIXTURE_DATA_FOLDER)%'
 
 services:
     # default configuration for services in *this* file
