--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
+        "@vue/compiler-sfc": "^3.2.8",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.35.1",
         "sass-loader": "^12.0.0",
         "stimulus": "^2.0.0",
+        "vue": "^3.2.8",
+        "vue-loader": "^16.5.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
