--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@popperjs/core": "^2.9.2",
-        "bootstrap": "^5.0.2"
+        "axios": "^0.21.4",
+        "bootstrap": "^5.0.2",
+        "vue-axios": "^3.2.5"
     }
 }
