--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@popperjs/core": "^2.9.2",
         "axios": "^0.21.4",
         "bootstrap": "^5.0.2",
+        "element-plus": "^1.1.0-beta.9",
         "vue-axios": "^3.2.5"
     }
 }
