fix(amount): révision sur la liste des charges et resources affichés

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,3 +47,6 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/dashboard, roles: IS_AUTHENTICATED_REMEMBERED }
+         - { path: ^/account, roles: IS_AUTHENTICATED_REMEMBERED }
+         - { path: ^/charge, roles: IS_AUTHENTICATED_REMEMBERED }
+         - { path: ^/resource, roles: IS_AUTHENTICATED_REMEMBERED }
