feat(notification): installation de symfony/mailer

--- a/.docker/environment/dev/docker-compose.traefik.yml
+++ b/.docker/environment/dev/docker-compose.traefik.yml
@@ -29,7 +29,7 @@ services:
             - traefik.http.routers.moneyer_phpmyadmin.entryPoints=web
 
     smtp:
-        image: djfarrelly/maildev:0.13.4
+        image: djfarrelly/maildev
         restart: always
         labels:
             - traefik.enable=true
