--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -41,5 +41,5 @@ services:
             - ${SOURCE_ROOT_FOLDER}:/app
 
     smtp :
-        image : djfarrelly/maildev:0.13.4
-        restart : always
+        image : djfarrelly/maildev
+        command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
