--- a/.env
+++ b/.env
@@ -30,6 +30,10 @@ APP_FIXTURE_DATA_FOLDER=data
 DATABASE_URL="mysql://moneyer:mysql@database:3306/moneyer?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
+###> symfony/mailer ###
+MAILER_DSN=smtp://smtp:25
+###< symfony/mailer ###
+
 ###> OAuth ###
 OAUTH2_PRIVATE_KEY=/var/ssh/jwtRS256
 OAUTH2_PUBLIC_KEY=/var/ssh/jwtRS256.pub
