--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/notifier": "5.3.*",
         "symfony/property-access": "5.3.*",
         "symfony/property-info": "5.3.*",
