feat(notification): envoi d'un mail lors d'un partage de compte

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=86076f1e4f714d58c2274684c6cfee9b
+ADMIN_EMAIL=gwennael.jean@mail.test
 ###< symfony/framework-bundle ###
 
 ###> fixtures ###
